2002-04-11  Mike Oliphant  <oliphant@gtk.org>

	* ja.po: added (thanks to Takeshi AIHANA for this)
	* de.po: updated (thanks to Goetz Waschk for this)
	* zn_CH.po: updated (thanks to Merlin Ma for this)
	* grip.spec: structural changes an zh_CN translation (thanks to
	  Merlin Ma for this)
	* doc: updated some of the screenshots
	* README: some additional info on dependencies
	* configure.in/grip.spec: upped version to 2.99.3
	
2002-04-02  Mike Oliphant  <oliphant@gtk.org>

	* rip.c: fixed a bug causing access checks to fail
	* rip.c: don't throw up "rip whole disc" dialog if ripping fails
	* configure.in/grip.spec: upped version to 2.99.2
	
2002-04-01  Mike Oliphant  <oliphant@gtk.org>

	* de.po: updated (thanks to Goetz Waschk for this)
	* zn_CH.po: added (thanks to Merlin Ma for this)
	* configure.in: fail if ghttp is not found
	* cdpar.c: removed misleading cdparanoia error message
	* rip.c: check if we can write wav/mp3/m3u files before proceeding
	* rip.c: put a 'nice' call in ThreadRip so that ripping using
	  internal cdparanoia can be niced.
	* gripcfg.c: updated flac commandline
	* configure.in/grip.spec: upped version to 2.99.1

2002-03-10  Mike Oliphant  <oliphant@gtk.org>

	* de.po: updated (thanks to Goetz Waschk for this)
	* doc/C/Makefile.am: now obeys DESTDIR (thanks to Alan Eldridge
	  for this)
	* grip.c/parsecfg.c: throw up a dialog and backup the old grip
	  config if we are forcing a reconfig
	* discdb.c: fixed order of title/artist in TTITLE (thanks to
	  Martin Michlmayr for catching this)
	* configure.in/cppmain.cc/main.c/Makefile.am: make sure we
	  initialize c++ datastructures (thanks to Alan Eldridge for this)
	* discdb.c: changed from "secs" to "seconds" in cddb format
	* discdb.c: send DYEAR even if it is blank
	* gripcfg.c: added "-b %b" to default ogg cmdline (thanks to Taku
	  Yasui for this)
	* rip.c: fixed floating point exception on alpha systems (thanks
	  to Taku Yasui for this)