@@ -3,7 +3,7 @@
 This repository contains all public releases of grip, taken from
 <http://sourceforge.net/projects/grip/files/grip/>
 
-This release is based on grip-2.99.3.tar.gz.
+This release is based on grip-3.0.0.tar.gz.
 
 I am not the author of Grip; this is here as a public service for
 anyone who wishes to fork and/or maintain the sources.
