@@ -2,7 +2,7 @@ AC_INIT(src/main.c)
 
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(grip,2.99.3)
+AM_INIT_AUTOMAKE(grip,3.0.0)
 
 AM_MAINTAINER_MODE
 
